# Maya-ObjectBuilder

./: .gitignore  .mailmap  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.claude/agents/: a3ob-command-maintainer.md  commit-writer.md  maya-debug-launcher.md  maya-ui-maintainer.md  model-cfg-specialist.md  p3d-architect.md  release-builder.md  validation-runner.md
.claude/commands/: commit.md
.claude/skills/a3ob-command-workflow/: SKILL.md
.claude/skills/commit-write/: SKILL.md
.claude/skills/maya-debug-launch/: SKILL.md
.claude/skills/model-cfg-validate/: SKILL.md
.claude/skills/p3d-debug/: SKILL.md
.claude/skills/p3d-validate/: SKILL.md
.claude/skills/plugin-smoke/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/release-build/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
install/: install_maya.py  mayaObjectBuilderInstall.py
scripts/: launch_maya_debug.ps1  mayaObjectBuilderP3DOptions.mel  objectBuilderAutoLOD.py  objectBuilderMenu.py  package_release.ps1
src/: PluginMain.cpp
src/commands/: ModelCfgCommands.cpp  ModelCfgCommands.h  StubCommands.cpp  StubCommands.h
src/formats/: BinaryIO.cpp  BinaryIO.h  ModelCfg.cpp  ModelCfg.h  P3D.cpp  P3D.h
src/maya/: MayaMeshExport.cpp  MayaMeshExport.h  MayaMeshImport.cpp  MayaMeshImport.h
src/translators/: P3DTranslator.cpp  P3DTranslator.h
tests/cpp/: model_cfg_test.cpp  p3d_roundtrip.cpp
tests/mayapy/: model_cfg_workflow.py  p3d_workflow.py
